<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/LinearLayout0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="#009688"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/modifier_client"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout00"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner

            android:id="@+id/sexe"
            android:layout_width="184dp"
            android:layout_height="wrap_content"
            android:background="#2503A9F4"
            android:dropDownSelector="@android:drawable/button_onoff_indicator_on"
            android:entries="@array/priorities"
            android:gravity="center"
            android:padding="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <EditText
            android:id="@+id/client_edit_nom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/nom"
            android:imeOptions="actionNext"
            tools:ignore="TextFields"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <EditText
            android:id="@+id/client_edit_adresse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:gravity="top"
            android:hint="@string/adresse"
            android:imeOptions="actionNext"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <EditText
            android:id="@+id/client_edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:gravity="top"
            android:hint="@string/e_mail"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout04"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"

        >

        <Button
            android:id="@+id/Annuler"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="0.47"
            android:text="@string/annuler"/>

        <Button
            android:id="@+id/client_edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_weight="0.46"
            android:background="#009688"
            android:text="@string/client_edit_confirm"
            android:textColor="#FFFFFF"/>

    </LinearLayout>

</LinearLayout>